# Time-series-forecasting

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml  fast.yaml
data/: raw
notebooks/: 01_task1_memory.ipynb  02_task2_eda.ipynb  03_task3_models.ipynb
outputs/: _make_notebooks.py
outputs/_docx/: build_report.js
reports/: comparison.md  eda_summary.json  experiments.md  hardware.json  metric_definitions.md
reports/tables/: anomalies_4159.csv  anomalies_4556.csv  anomalies_5161.csv  experiments_all.csv  experiments_cnn.csv  experiments_lstm.csv  experiments_sarima.csv  failure_cases.csv  memory_report.csv  task3_metrics_4159.csv  task3_metrics_4556.csv  task3_metrics_5161.csv  task3_metrics_all.csv  task3_timing.csv
src/mtraffic/: __init__.py  cli.py  config.py
src/mtraffic/data/: __init__.py  catalog.py  loaders.py
src/mtraffic/eda/: __init__.py  anomalies.py  cli_eda.py  correlation.py  decomposition.py  distributions.py  spatial.py  stationarity.py  style.py  timeseries.py
src/mtraffic/eval/: __init__.py  cli_eval.py  failure.py  metrics.py  plots.py  tuning.py  walkforward.py
src/mtraffic/io/: __init__.py  cli_ingest.py  memory_scenarios.py  paths.py  readers.py  writers.py
src/mtraffic/models/: __init__.py  cli_train.py
src/mtraffic/models/baselines/: naive.py
src/mtraffic/models/classical/: sarima.py
src/mtraffic/models/neural/: cnn_torch.py  lstm_torch.py
src/mtraffic/models/neural/common/: features.py
src/mtraffic/transform/: __init__.py  dtypes.py
src/mtraffic/utils/: __init__.py  hardware.py  logging.py  memory.py  seed.py  timers.py
tests/: conftest.py
tests/unit/: test_config.py  test_dtypes.py  test_metrics.py  test_paths.py  test_seed.py  test_version.py  test_walkforward.py
